--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: UML .FRI web site
+description: UML .FRI is nice CASE tool with DSM capabilities
+email: jan.janech@kst.uniza.sk
 remote_theme: "awochna/jekyll-skeleton"
-repository:
-description: UML .FRI web site
