--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: UML .FRI web site
+title: UML .FRI 2
 description: UML .FRI is nice CASE tool with DSM capabilities
 email: jan.janech@kst.uniza.sk
+author: Jan Janech
 remote_theme: "awochna/jekyll-skeleton"
