--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: UML .FRI 2
 description: UML .FRI is nice CASE tool with DSM capabilities
 email: jan.janech@kst.uniza.sk
 author: Jan Janech
-remote_theme: "awochna/jekyll-skeleton"
+# remote_theme: "awochna/jekyll-skeleton"
