--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: UML .FRI is nice CASE tool with DSM capabilities
 email: jan.janech@kst.uniza.sk
 author: Jan Janech
 # remote_theme: "awochna/jekyll-skeleton"
+exclude:
+  - assets/images/screenshots/convert.sh
