--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,13 +3,13 @@ pages:
     url: /
 
   - title: About
-    url: about.html
+    url: /about.html
 
   - title: Downloads
-    url: downloads.html
+    url: /downloads.html
 
   - title: Screenshots
-    url: screenshots.html
+    url: /screenshots.html
 
   - title: GitHub page
     url: https://github.com/umlfri/umlfri2/
