--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: UML .FRI 2
 description: UML .FRI is nice CASE tool with DSM capabilities
 email: jan.janech@kst.uniza.sk
 author: Jan Janech
-# remote_theme: "awochna/jekyll-skeleton"
 exclude:
   - assets/images/screenshots/convert.sh
 excerpt_separator: <!--more-->
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
