opening external sites in a new tab

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -12,8 +12,10 @@ pages:
     url: /screenshots.html
 
   - title: Issues
+    external: true
     url: https://github.com/umlfri/umlfri2/issues/
 
   - title: GitHub page
     icon: github
+    external: true
     url: https://github.com/umlfri/umlfri2/
