--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -9,3 +9,8 @@
   files:
     - platform: win32
       file: umlfri-setup-2.1.exe
+- version: 2.1.1
+  published: 2019-02-25
+  files:
+    - platform: win32
+      file: umlfri-setup-2.1.1.exe
