--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -24,3 +24,8 @@
   files:
     - platform: win32
       file: umlfri-setup-2.2.1.exe
+- version: 2.2.2
+  published: 2021-09-06
+  files:
+    - platform: win32
+      file: umlfri-setup-2.2.2.exe
